--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
-    "bootstrap": "^5.2.2",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "vercel": "^28.8.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
@@ -37,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.5"
   }
 }
